tests/machine/x/pascal/fun_expr_in_let.error
line: 23
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/fun_expr_in_let.pas
fun_expr_in_let.pas(17,36) Error: Identifier not found "p0__integer"
fun_expr_in_let.pas(20,13) Error: Incompatible types: got "<address of function(LongInt):LongInt;Register>" expected "<procedure variable type of function(<erroneous type>):LongInt;Register>"
fun_expr_in_let.pas(23) Fatal: There were 2 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

